@@ -17,5 +17,6 @@ LMC_0.1.1 {
 
 LMC_0.1.2 {
  bson_cursor_find;
+ mongo_connection_set_timeout;
  mongo_sync_cmd_index_*;
 } LMC_0.1.1;
