@@ -257,3 +257,29 @@ mongo_connection_get_requestid (const mongo_connection *conn)
 
   return conn->request_id;
 }
+
+gboolean
+mongo_connection_set_timeout (mongo_connection *conn, gint timeout)
+{
+  struct timeval tv;
+
+  if (!conn)
+    {
+      errno = ENOTCONN;
+      return FALSE;
+    }
+  if (timeout < 0)
+    {
+      errno = ERANGE;
+      return FALSE;
+    }
+
+  tv.tv_sec = timeout / 1000;
+  tv.tv_usec = (timeout % 1000) * 1000;
+
+  if (setsockopt (conn->fd, SOL_SOCKET, SO_RCVTIMEO, &tv, sizeof (tv)) == -1)
+    return FALSE;
+  if (setsockopt (conn->fd, SOL_SOCKET, SO_SNDTIMEO, &tv, sizeof (tv)) == -1)
+    return FALSE;
+  return TRUE;
+}
